--- a/photoshare/photoshare/FinanceCalculatorViewController.xib
+++ b/photoshare/photoshare/FinanceCalculatorViewController.xib
@@ -11,9 +11,11 @@
                 <outlet property="border2" destination="tg3-it-ywY" id="SjK-w5-s1t"/>
                 <outlet property="border3" destination="Hn3-rI-0d7" id="HyO-yI-k2z"/>
                 <outlet property="currencySetter" destination="Hjw-y2-YHx" id="sKc-Op-m7j"/>
+                <outlet property="cutomView" destination="XsV-xe-kH7" id="Kq4-YK-f6p"/>
                 <outlet property="firstGem" destination="w6E-df-wAj" id="MV9-x4-t2C"/>
                 <outlet property="firstGemDown_btn" destination="kWv-f1-fjU" id="VLi-FC-wgP"/>
                 <outlet property="firstGemUP_btn" destination="mzE-gy-qii" id="pBq-Jd-m4y"/>
+                <outlet property="myPickerView" destination="W8c-wg-5dF" id="v5Z-vb-u3D"/>
                 <outlet property="secondGem" destination="tPc-ls-ocz" id="54b-SU-408"/>
                 <outlet property="secondGemDown_btn" destination="1eM-sB-IdH" id="xZR-eh-MYk"/>
                 <outlet property="secondGemUP_btn" destination="sCa-0G-7OE" id="T0N-au-lmD"/>
@@ -38,7 +40,7 @@
                         <segment title="€"/>
                     </segments>
                     <connections>
-                        <action selector="segmentedControlIndexChanged" destination="-1" eventType="valueChanged" id="MEv-ch-5bu"/>
+                        <action selector="segmentedControlIndexChanged" destination="-1" eventType="valueChanged" id="lue-Hf-0P6"/>
                     </connections>
                 </segmentedControl>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Total Earnings:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nvk-dJ-xQq">
@@ -174,9 +176,6 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <connections>
-                        <action selector="fGemUp_Btn:" destination="-1" eventType="touchDown" id="pzl-ZJ-EzH"/>
-                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kWv-f1-fjU">
                     <rect key="frame" x="273" y="255" width="34" height="33"/>
@@ -185,9 +184,6 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <connections>
-                        <action selector="fGemDown_Btn:" destination="-1" eventType="touchDown" id="CTv-89-3hT"/>
-                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sCa-0G-7OE">
                     <rect key="frame" x="273" y="317" width="35" height="36"/>
@@ -196,9 +192,6 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <connections>
-                        <action selector="sGemUp_btn:" destination="-1" eventType="touchDown" id="5xy-4D-2U2"/>
-                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1eM-sB-IdH">
                     <rect key="frame" x="273" y="359" width="34" height="36"/>
@@ -207,9 +200,6 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <connections>
-                        <action selector="sGemDown_btn:" destination="-1" eventType="touchDown" id="VBW-NU-fC8"/>
-                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6eP-wF-6Bq">
                     <rect key="frame" x="273" y="458" width="35" height="36"/>
@@ -218,9 +208,6 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <connections>
-                        <action selector="tGemDown_btn:" destination="-1" eventType="touchDown" id="DQY-AY-MWl"/>
-                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9c-fW-B2Z">
                     <rect key="frame" x="272" y="415" width="36" height="36"/>
@@ -229,12 +216,72 @@
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                </button>
+                <button opaque="NO" tag="11" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p54-na-DWI">
+                    <rect key="frame" x="273" y="211" width="35" height="78"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                     <connections>
-                        <action selector="tGemUp_btn:" destination="-1" eventType="touchDown" id="aun-fG-Mjg"/>
+                        <action selector="hideViewCustom:" destination="-1" eventType="touchUpInside" id="Xnz-yS-MpG"/>
                     </connections>
                 </button>
+                <button opaque="NO" tag="12" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="23m-WV-bV2">
+                    <rect key="frame" x="273" y="318" width="35" height="78"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="hidetwoView:" destination="-1" eventType="touchUpInside" id="qI4-KF-TG8"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEX-BZ-UHv">
+                    <rect key="frame" x="276" y="415" width="30" height="78"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="hidethreeView:" destination="-1" eventType="touchUpInside" id="59V-JM-5hA"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XsV-xe-kH7">
+                    <rect key="frame" x="0.0" y="209" width="320" height="286"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W8c-wg-5dF">
+                            <rect key="frame" x="0.0" y="93" width="320" height="162"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="Vso-Cn-6eP"/>
+                                <outlet property="delegate" destination="-1" id="zrs-48-Vug"/>
+                            </connections>
+                        </pickerView>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1st Level" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhg-1G-f8N">
+                            <rect key="frame" x="24" y="62" width="69" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2nd Level" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dL-qr-YnB">
+                            <rect key="frame" x="127" y="62" width="69" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="3rd Level" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifp-yC-o5E">
+                            <rect key="frame" x="233" y="62" width="69" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
