--- a/photoshare/photoshare/ReferrelStageFourVC3.xib
+++ b/photoshare/photoshare/ReferrelStageFourVC3.xib
@@ -45,7 +45,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.80614237879999995" green="0.80614237879999995" blue="0.80614237879999995" alpha="1" colorSpace="calibratedRGB"/>
                 </imageView>
-                <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" editable="NO" text="Now choose how you would you like to find your friends....." selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xly-tk-EvU">
+                <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" editable="NO" text="Now choose how you would like to find your friends" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xly-tk-EvU">
                     <rect key="frame" x="10" y="97" width="298" height="63"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
