--- a/photoshare/photoshare/LoginViewController.xib
+++ b/photoshare/photoshare/LoginViewController.xib
@@ -12,6 +12,7 @@
                 <outlet property="namecancelBtn" destination="lbl-fi-Wut" id="nmd-lp-2lv"/>
                 <outlet property="passwordTextField" destination="hqh-Sz-RYK" id="oCc-jS-7UT"/>
                 <outlet property="passwordcancelBtn" destination="amf-Ke-j2V" id="oJ4-r9-RDZ"/>
+                <outlet property="rememberMeBtn" destination="PBF-fU-pzA" id="ZDP-Lb-cEM"/>
                 <outlet property="scrollView" destination="tLA-Kt-vxZ" id="7Gq-rd-Fpq"/>
                 <outlet property="signinBtn" destination="exO-a2-fwf" id="xgT-uv-5WT"/>
                 <outlet property="view" destination="1" id="3"/>
@@ -103,8 +104,7 @@
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
-                                <action selector="rememberBtnTapped" destination="-1" eventType="touchUpInside" id="b2d-S7-o5m"/>
-                                <action selector="rememberBtnTapped:" destination="-1" eventType="touchUpInside" id="agm-Hk-Dwy"/>
+                                <action selector="rememberBtnTapped" destination="-1" eventType="touchUpInside" id="kEz-HT-wrw"/>
                             </connections>
                         </button>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3bu-ul-KAW">
